# freecog

./: README.md  pyproject.toml
examples/: ieeg_e2e_montage.py
notebooks/: ECXX-Recon.ipynb  brainly.py  brainly_example.ipynb  freesurfer_tools.py
scripts/: convert_fsmesh2mlab.py  convert_fssubcort2mesh.py  coord2roi.py  elecs2labels.py  freecog  gen_elecs_all.py  ieeg_e2e_montage.py  register_ctmr.py
scripts/.ipynb_checkpoints/: ieeg_e2e_montage-checkpoint.py
src/freecog/: __init__.py  header.py
src/freecog/ieeg/: __init__.py
src/freecog/ieeg/dataclasses/: __init__.py  ieeg_channel.py  ieeg_electrode.py  ieeg_montage.py  ieeg_sensor.py
src/freecog/mri/: __init__.py
src/freecog/mri/dataclasses/: __init__.py  mri_atlas.py  mri_pointanatomy.py
