[project]
name = "freecog"
version = "0.1.0"
description = "freecog"
authors = [{name = "Ankit N. Khambhati", email = "akhambhati@gmail.com"}]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/khambhati-lab/freecog"
repository = "https://github.com/khambhati-lab/freecog"
documentation = "https://freecog.readthedocs.io"
packages = [
  { include = "freecog", from = "src" },
]
classifiers = [
  "Development Status :: 2 - Alpha",
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "nibabel>=5.3.2",
    "nipy>=0.6.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"
